<resources>
    <string name="app_name">Quiz App</string>
    <string name="login_title">Login</string>
    <string name="signup_title">Sign Up</string>
    <string name="username_hint">Username</string>
    <string name="password_hint">Password</string>
    <string name="login_button">Login</string>
    <string name="signup_button">Sign Up</string>
    <string name="no_account">Don\'t have an account? Sign up</string>
    <string name="already_account">Already have an account? Login</string>
    <string name="categories_title">Categories</string>
    <string name="quiz_score">Score: %1$d</string>
    <string name="quiz_timer">Time: %1$ss</string>
    <string name="next_button">Next</string>
    <string name="finish_button">Finish</string>
    <string name="result_title">Quiz Result</string>
    <string name="final_score">Your Score: %1$d / %2$d</string>
    <string name="retry_button">Try Again</string>
    <string name="home_button">Go to Categories</string>
    <string name="question_count">Question %1$d / %2$d</string>
    <string name="confirm_password_hint">Confirm Password</string>
</resources>
